# ChangeLog for net-misc/dropbear
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.79 2011/02/28 16:29:07 vapier Exp $

*dropbear-0.53 (28 Feb 2011)

  28 Feb 2011; Mike Frysinger <vapier@gentoo.org> +dropbear-0.53.ebuild:
  Version bump.

*dropbear-0.52-r1 (20 Apr 2010)

  20 Apr 2010; Mike Frysinger <vapier@gentoo.org> dropbear-0.52.ebuild,
  +dropbear-0.52-r1.ebuild:
  Fix path to xauth #314645 by Jochen Schlick.

  05 Nov 2009; Raúl Porcel <armin76@gentoo.org> dropbear-0.52.ebuild:
  ia64/m68k/s390/sh/sparc stable wrt #282028

  02 Nov 2009; Jeroen Roovers <jer@gentoo.org> dropbear-0.52.ebuild:
  Stable for HPPA (bug #282028).

  31 Oct 2009; Brent Baude <ranger@gentoo.org> dropbear-0.52.ebuild:
  Marking dropbear-0.52 ppc64 for bug 282028

  24 Oct 2009; nixnut <nixnut@gentoo.org> dropbear-0.52.ebuild:
  ppc stable #282028

  20 Oct 2009; Markus Meier <maekke@gentoo.org> dropbear-0.52.ebuild:
  amd64/arm/x86 stable, bug #282028

  18 Oct 2009; Tobias Klausmann <klausman@gentoo.org> dropbear-0.52.ebuild:
  Stable on alpha, bug #282028

  20 Dec 2008; Peter Volkov <pva@gentoo.org> dropbear-0.49.ebuild,
  dropbear-0.52.ebuild:
  ~mips rekeyworeded, bug #210795.

  24 Nov 2008; Brent Baude <ranger@gentoo.org> dropbear-0.51.ebuild:
  stable ppc64, bug 230259

  19 Nov 2008; Raúl Porcel <armin76@gentoo.org> dropbear-0.51.ebuild:
  alpha/ia64 stable wrt #230259

  17 Nov 2008; Ferris McCormick <fmccor@gentoo.org> dropbear-0.51.ebuild:
  Sparc stable --- Bug #230259.

  17 Nov 2008; Jeroen Roovers <jer@gentoo.org> dropbear-0.51.ebuild:
  Stable for HPPA (bug #230259).

  15 Nov 2008; Markus Meier <maekke@gentoo.org> dropbear-0.51.ebuild:
  amd64/x86 stable, bug #230259

*dropbear-0.52 (12 Nov 2008)

  12 Nov 2008; Mike Frysinger <vapier@gentoo.org> +dropbear-0.52.ebuild:
  Version bump and reject USE="pam static" #236396.
