@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/dropbear
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.79 2011/02/28 16:29:07 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/dropbear/ChangeLog,v 1.80 2011/03/03 02:19:12 vapier Exp $
+
+*dropbear-0.53.1 (03 Mar 2011)
+
+  03 Mar 2011; Mike Frysinger <vapier@gentoo.org> +dropbear-0.53.1.ebuild:
+  Version bump.
 
 *dropbear-0.53 (28 Feb 2011)
 
